# FP-LAB2

./: .gitignore  Lab2.opam  README.md  dune-project
.github/workflows/: ci.yml
lib/: dune  hashmap.ml  hashmap.mli  lib.ml
test/: dune  test_Lab2.ml
